# Innowise-Dybal

./: pyproject.toml
notebooks/: EDA.ipynb  dqc_etl_implementation.ipynb
src/baseline/: basemodel.py  feature_extraction.py  validation.py
src/dataloader/: dataloader.py
src/decorators/: exec_time.py
src/dqc/: dqc.py  dqc_template.py
src/etl/: dataloader.py  etl.py
src/plotter/: plotter.py
